--- a/package.json
+++ b/package.json
@@ -8,5 +8,15 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.1.0",
+        "ant-design-vue": "^3.2.17",
+        "lodash": "^4.17.21",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.0.1",
+        "vue-request": "^1.2.4",
+        "vue-router": "^4.1.6",
+        "vuex": "^4.0.2"
     }
 }
